--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,6 +11,27 @@
     <h1>Lasagna</h1>
     
     <img src="../images/lasagna.jpeg" alt="Picture of lasagna" height="500">
-    <p></p>
+
+    <h2>Description</h2>
+    <p>Some description about lasagna.
+    </p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Cheese</li>
+        <li>Minced meat</li>
+        <li>Tomato Sauce</li>
+        <li>Lasagna pasta</li>
+    </ul>
+
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Step 1</li>
+        <li>Step 2</li>
+        <li>Step 3</li>
+        <li>Step 4</li>
+        <li>Step 5</li>
+    </ol>
+
 </body>
 </html>
