Added taco,pizza,beef imgs and htmls. Update index

--- a/recipes/beef.html
+++ b/recipes/beef.html
@@ -3,24 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna</title>
+    <title>Beef</title>
 </head>
 <body>
     <a href="../index.html">Home</a>
 
-    <h1>Lasagna</h1>
+    <h1>Beef</h1>
     
-    <img src="../images/lasagna.jpeg" alt="Picture of lasagna" height="500">
+    <img src="../images/beef.jpg" alt="Picture of beef" height="500">
 
     <h2>Description</h2>
-    <p>Some description about lasagna.
+    <p>Some description about beef.
     </p>
     <h3>Ingredients</h3>
     <ul>
         <li>Cheese</li>
         <li>Minced meat</li>
         <li>Tomato Sauce</li>
-        <li>Lasagna pasta</li>
     </ul>
 
 
