--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <ol>
+        <a href="recipes/lasagna.html">Lasagna</a>
+        <a href="recipes/pizza.html">Pizza</a>
+        <a href="recipes/beef.html">Beef</a>
+        <a href="recipes/taco.html">Taco</a>
+    </ol>
 </body>
 </html>
