--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna</title>
+    <title>Pizza</title>
 </head>
 <body>
     <a href="../index.html">Home</a>
 
-    <h1>Lasagna</h1>
+    <h1>Pizza</h1>
     
-    <img src="../images/lasagna.jpeg" alt="Picture of lasagna" height="500">
+    <img src="../images/pizza.jpg" alt="Picture of pizza" height="500">
 
     <h2>Description</h2>
-    <p>Some description about lasagna.
+    <p>Some description about pizza.
     </p>
     <h3>Ingredients</h3>
     <ul>
