--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna</title>
+    <title>Taco</title>
 </head>
 <body>
     <a href="../index.html">Home</a>
 
-    <h1>Lasagna</h1>
+    <h1>Taco</h1>
     
-    <img src="../images/lasagna.jpeg" alt="Picture of lasagna" height="500">
+    <img src="../images/taco.jpg" alt="Picture of taco" height="500">
 
     <h2>Description</h2>
     <p>Some description about lasagna.
